# fpm-96eyes-pipeline

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt
algorithms/: autofocus_generator.cpp  linear_ops.hpp  meson.build  phase_generator.cpp  types.h
algorithms/inc/: fpm-epry_generator.h  linear_ops.h  linear_ops.hpp  vars.hpp
algorithms/src/: autofocus_generator.cpp  fluorescence_generator.cpp  fpm-epry_design.cpp  fpm-epry_generator.cpp  fpm-epry_impl.cpp  high-res-init_generator.cpp  linear_ops.cpp  phase_generator.cpp
algorithms/tests/: meson.build  test_autofocus.cpp  test_fluorescence.cpp  test_phase.cpp
apps/: meson.build
apps/export-images/: main.cpp
apps/utils/: tasks.hpp
common/: constants.hpp  meson.build
fft-wrapper/: meson.build
fft-wrapper/inc/: cuda-context.h  cuda_assert.h  cuda_batch_fft2d.h
fft-wrapper/src/: cuda-context.cpp  cuda_batch_fft2d.cpp
metadata/: meson.build
metadata/test-data/: image-url.xml  meson.build
metadata/tests/: test-metadata.cpp
src/: meson.build
src/algorithms/: constants.hpp  fluorescence_generator.cpp  funct.h
src/apps/export-images/: constants.h  decode-fluorescence.cpp  decode-fluorescence.h  decode-phase.cpp  decode-phase.h
src/storage/: complex_float_support.hpp  metadata-parser.cpp  read-slice.cpp  save_xml_raw.cpp  save_xml_raw.h
src/subprojects/packagefiles/cpp-base64/: meson.build
src/subprojects/packagefiles/highfive/: meson.build
src/test-data/: meson.build  register.xml
src/tests/: meson.build  test_autofocus.cpp  test_phase.cpp
storage/: FPM_datafile.h  FPM_datafile_impl.hpp  meson.build  metadata-parser.h  read-slice.h
subprojects/: armadillo-code.wrap  cpp-base64.wrap  highfive.wrap
subprojects/halide-fft/: complex.h  meson.build
subprojects/packagefiles/armadillo-code/: meson.build
test-data/: meson.build
tests/: meson.build  test_armadillo.cpp  test_autofocus.cpp  test_fluorescence.cpp  test_phase.cpp
wavevector-calibration/: meson.build  wavevector_utility.hpp
wavevector-calibration/inc/: wavevector_utility.hpp
wavevector-calibration/src/: wavevector_utility.cpp
wavevector-calibration/tests/: test-wavevector.cpp
