image_url_xml_path = meson.current_source_dir() / 'image-url.xml'
register_xml_path = meson.current_source_dir() / 'register.xml'
files(
    image_url_xml_path,
    register_xml_path,
)

datafile_path = meson.current_source_dir() / '2019-09-19-hiPSC-SYTO24-PhalloidinAF568.hdf5'
#datafile = files(datafile_path)
